load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:prefix go.jetpack.io/envsec

go_library(
    name = "envsec",
    srcs = [
        "envsec.go",
        "parameter_store.go",
        "secret_store.go",
        "util.go",
    ],
    importpath = "go.jetpack.io/envsec",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_credentials//:credentials",
        "@com_github_aws_aws_sdk_go_v2_service_ssm//:ssm",
        "@com_github_aws_aws_sdk_go_v2_service_ssm//types",
        "@com_github_hashicorp_go_multierror//:go-multierror",
        "@com_github_pkg_errors//:errors",
        "@com_github_samber_lo//:lo",
    ],
)
