load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "envcli",
    srcs = [
        "download.go",
        "exec.go",
        "ls.go",
        "rm.go",
        "root.go",
        "set.go",
        "upload.go",
        "usage.go",
        "util.go",
    ],
    importpath = "go.jetpack.io/envsec/envcli",
    visibility = ["//visibility:public"],
    deps = [
        "//opensource/envsec",
        "//opensource/envsec/tux",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_joho_godotenv//:godotenv",
        "@com_github_makenowjust_heredoc//:heredoc",
        "@com_github_olekukonko_tablewriter//:tablewriter",
        "@com_github_pkg_errors//:errors",
        "@com_github_samber_lo//:lo",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_test(
    name = "envcli_test",
    srcs = ["root_test.go"],
    embed = [":envcli"],
)
