load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tux",
    srcs = ["tux.go"],
    importpath = "go.jetpack.io/envsec/tux",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_fatih_color//:color",
        "@com_github_pkg_errors//:errors",
    ],
)
