load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tux",
    srcs = [
        "style.go",
        "tux.go",
    ],
    importpath = "go.jetpack.io/envsec/tux",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_fatih_color//:color",
        "@com_github_muesli_termenv//:termenv",
        "@com_github_pkg_errors//:errors",
    ],
)
